# SerialHub

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
device-sketches/meterSIM/: DeviceDetails.md  meterSIM.ino
device-sketches/serial-device-test/: serial-device-test.ino
scripts/: install_linux.sh  install_windows.ps1
serial-device-test/: serial-device-test.ino
src/serialhub/: __init__.py  __main__.py  app.py  cli.py  config.py  defaults.py  serialhub.tcss  theme.py  updater.py  web.py
src/serialhub/core/: __init__.py  device_manager.py  macro_store.py  models.py  serial_connection.py  session.py
src/serialhub/logging/: session_logger.py
src/serialhub/protocols/: __init__.py  ascii.py  base.py  dlms_gurux.py
src/serialhub/scripting/: __init__.py  engine.py
tests/: test_cli.py  test_dlms_decoder.py  test_logging_filename.py  test_macro_store.py  test_shutdown_guard.py  test_theme.py  test_web.py  test_workspace_ui.py
